erDiagram

    users ||--o{ messages : sends
    users ||--o{ rooms : creates
    rooms ||--o{ messages : contains

    users {
        text id PK
        hash password
        text tokenKey
        email email
        boolean emailVisbility
        boolean verified
        text name
        autodate created
        autodate updated
    }

    rooms {
        text id PK
        relation userId FK
        text name
        text displayName
        text description
        autodate created
        autodate updated
    }

    messages {
        text id PK
        text userId FK
        text roomId FK
        text content
        autodate created
        autodate updated
    }

